<resources>
    <string name="app_name">TODOList_ViewPager</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cnew">Create New</string>
    <string name="ttitle">Task Title</string>
    <string name="deadline">Deadline</string>
    <string name="deletetask">Delete the Task?</string>
    <string name="really">Do you really want to delete the Task?</string>
    <string name="ni">NO</string>
    <string name="yes">YES</string>
</resources>
