<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <View
            android:id="@+id/view"
            android:layout_width="398dp"
            android:layout_height="2dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:layout_marginTop="283dp"
            android:layout_marginEnd="13dp" />

        <TextView
            android:id="@+id/task"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="73dp"
            android:maxLines="3"
            android:text="@string/deletetask"
            android:textColor="@android:color/black"
            android:textSize="26sp"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="180dp" />

        <View
            android:id="@+id/view2"
            android:layout_width="398dp"
            android:layout_height="2dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="6dp"
            android:layout_marginTop="69dp"
            android:layout_marginEnd="10dp"
            android:background="#0D47A1" />

        <TextView
            android:id="@+id/time"
            android:layout_width="301dp"
            android:layout_height="69dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="108dp"
            android:layout_marginEnd="66dp"
            android:text="@string/really"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            tools:layout_editor_absoluteX="219dp"
            tools:layout_editor_absoluteY="220dp" />

        <Button
            android:id="@+id/yesButton"
            android:layout_width="113dp"
            android:layout_height="58dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="71dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="200dp"
            android:backgroundTint="#00C853"
            android:text="@string/yes" />

        <Button
            android:id="@+id/noButton"
            android:layout_width="109dp"
            android:layout_height="62dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="213dp"
            android:layout_marginTop="198dp"
            android:layout_marginEnd="62dp"
            android:backgroundTint="#E57373"
            android:text="@string/ni" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
